# SAM_XMem_TensorRT

./: .gitignore  CMakeLists.txt  CMake指令.txt  README.md  WSLpip.txt  app.py  新建 文本文档.txt  编译执行方式.txt  跑分用指令.txt  路径.txt
